--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.3.0/css/all.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <title>Javascript-blog</title>
 </head>
 <body>
-    <div class="blog">
-        <div class="container">
-        <h1 class="logo">my blog</h1>
+    <div class="container">
+        <div class="wrapper">
+            <div class="logo-animation">
+                <lottie-player src="https://lottie.host/e8c80d80-523e-40af-a53d-fdf0e3ad8392/ro4j8rShCD.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;display:flex;" loop  autoplay></lottie-player>
+            </div>
+            <div class="logo-text">
+                <h1 class="logo">my blog</h1>
+            </div>
+            <div class="logo-animation ani-right">
+                <lottie-player src="https://lottie.host/e8c80d80-523e-40af-a53d-fdf0e3ad8392/ro4j8rShCD.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;display:flex;" loop  autoplay></lottie-player>
+            </div>
+        </div>
         <main class="wrapper">
         <aside class="sidebar">
             <h2 class="section-title">All posts</h2>
